--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
   <!-- Footer -->
   <footer class="bg-light py-5">
     <div class="container">
-      <div class="small text-center text-muted">Copyright &copy; 2019 - Start Bootstrap</div>
+      <div class="small text-center text-muted">Copyright &copy; <span>2019</span> - Start Bootstrap</div>
     </div>
   </footer>
 
